<?xml version="1.0"?>
<package format="3">
  <name>line_follower</name>
  <version>0.0.0</version>
  <description>Line following mobile robot using ROS2 and OpenCV</description>
  <maintainer email="lab@ntrex.co.kr">Ntrex</maintainer>
  <license>Apache License, Version 2.0</license>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>ament_python</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
